parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Prog                              (0)
	Prog -> GDefn                                      (1)
	Prog -> GDefn Prog                                 (2)
	GDefn -> Type id "(" ")" "{" "}"                   (3)
	GDefn -> Type id "(" ")" "{" Stmts "}"             (4)
	GDefn -> Type id "(" GDefns ")" "{" "}"            (5)
	GDefn -> Type id "(" GDefns ")" "{" Stmts "}"      (6)
	GDefns -> Type id                                  (7)
	GDefns -> Type id "," GDefns                       (8)
	Stmt -> Simple ";"                                 (9)
	Stmt -> if "(" Exp ")" Stmt else Stmt              (10)
	Stmt -> if "(" Exp ")" "{" Stmts "}" else Stmt     (11)
	Stmt -> if "(" Exp ")" Stmt else "{" Stmts "}"     (12)
	Stmt -> if "(" Exp ")" "{" Stmts "}" else "{" Stmts "}"   (13)
	Stmt -> if "(" Exp ")" Stmt                        (14)
	Stmt -> if "(" Exp ")" "{" Stmts "}"               (15)
	Stmt -> while "(" Exp ")" Stmt                     (16)
	Stmt -> while "(" Exp ")" "{" Stmts "}"            (17)
	Stmt -> for "(" Simple ";" Exp ";" Simple ")" Stmt   (18)
	Stmt -> for "(" Simple ";" Exp ";" Simple ")" "{" Stmts "}"   (19)
	Stmt -> return Exp ";"                             (20)
	Stmt -> print_int "(" Exp ")" ";"                  (21)
	Stmts -> Stmt                                      (22)
	Stmts -> Stmt Stmts                                (23)
	Simple -> id "=" Exp                               (24)
	Simple -> id "++"                                  (25)
	Simple -> id "--"                                  (26)
	Simple -> Type Ids                                 (27)
	Ids -> id                                          (28)
	Ids -> id "," Ids                                  (29)
	Ids -> id "=" Exp                                  (30)
	Ids -> id "=" Exp "," Ids                          (31)
	Type -> int                                        (32)
	Type -> bool                                       (33)
	Exp -> num                                         (34)
	Exp -> true                                        (35)
	Exp -> false                                       (36)
	Exp -> Exp "+" Exp                                 (37)
	Exp -> Exp "-" Exp                                 (38)
	Exp -> Exp "/" Exp                                 (39)
	Exp -> Exp "*" Exp                                 (40)
	Exp -> Exp "%" Exp                                 (41)
	Exp -> Exp "==" Exp                                (42)
	Exp -> Exp ">" Exp                                 (43)
	Exp -> Exp "<" Exp                                 (44)
	Exp -> Exp ">=" Exp                                (45)
	Exp -> Exp "<=" Exp                                (46)
	Exp -> Exp "!=" Exp                                (47)
	Exp -> Exp "&&" Exp                                (48)
	Exp -> "!" Exp                                     (49)
	Exp -> id                                          (50)
	Exp -> scan_int "(" ")"                            (51)
	Exp -> id "(" Exp ")"                              (52)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	bool           { BOOL }
	true           { TRUE }
	false          { FALSE }
	int            { INT }
	if             { IF }
	for            { FOR }
	return         { RETURN }
	else           { ELSE }
	print_int      { PRINTINT }
	scan_int       { SCANINT }
	id             { ID $$ }
	num            { NUM $$ }
	","            { COMMA }
	";"            { SEMI }
	"++"           { INCR }
	"+"            { SUM }
	"--"           { DECR }
	"-"            { SUB }
	"*"            { MULT }
	"/"            { DIV }
	"%"            { MOD }
	"=="           { EQUAL }
	"!="           { DIFF }
	">"            { BIGGER }
	"<"            { LESS }
	">="           { BIGGEROREQ }
	"<="           { LESSOREQ }
	"="            { ASSIGN }
	"{"            { OPENBRACKETS }
	"}"            { CLOSEBRACKETS }
	"("            { OPENPARENTHESIS }
	")"            { CLOSEPARENTHESIS }
	while          { WHILE }
	"!"            { NOT }
	"&&"           { AND }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Prog            rules 1, 2
	GDefn           rules 3, 4, 5, 6
	GDefns          rules 7, 8
	Stmt            rules 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21
	Stmts           rules 22, 23
	Simple          rules 24, 25, 26, 27
	Ids             rules 28, 29, 30, 31
	Type            rules 32, 33
	Exp             rules 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	bool           shift, and enter state 4
	int            shift, and enter state 5

	Prog           goto state 6
	GDefn          goto state 7
	Type           goto state 3

State 1


	bool           shift, and enter state 4
	int            shift, and enter state 5

	GDefn          goto state 2
	Type           goto state 3

State 2

	Prog -> GDefn .                                     (rule 1)



State 3

	GDefn -> Type . id "(" ")" "{" "}"                  (rule 3)
	GDefn -> Type . id "(" ")" "{" Stmts "}"            (rule 4)
	GDefn -> Type . id "(" GDefns ")" "{" "}"           (rule 5)
	GDefn -> Type . id "(" GDefns ")" "{" Stmts "}"     (rule 6)

	id             shift, and enter state 9


State 4

	Type -> bool .                                      (rule 33)

	id             reduce using rule 33


State 5

	Type -> int .                                       (rule 32)

	id             reduce using rule 32


State 6

	%start_parser -> Prog .                             (rule 0)

	%eof           accept


State 7

	Prog -> GDefn .                                     (rule 1)
	Prog -> GDefn . Prog                                (rule 2)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	%eof           reduce using rule 1

	Prog           goto state 8
	GDefn          goto state 7
	Type           goto state 3

State 8

	Prog -> GDefn Prog .                                (rule 2)

	%eof           reduce using rule 2


State 9

	GDefn -> Type id . "(" ")" "{" "}"                  (rule 3)
	GDefn -> Type id . "(" ")" "{" Stmts "}"            (rule 4)
	GDefn -> Type id . "(" GDefns ")" "{" "}"           (rule 5)
	GDefn -> Type id . "(" GDefns ")" "{" Stmts "}"     (rule 6)

	"("            shift, and enter state 10


State 10

	GDefn -> Type id "(" . ")" "{" "}"                  (rule 3)
	GDefn -> Type id "(" . ")" "{" Stmts "}"            (rule 4)
	GDefn -> Type id "(" . GDefns ")" "{" "}"           (rule 5)
	GDefn -> Type id "(" . GDefns ")" "{" Stmts "}"     (rule 6)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	")"            shift, and enter state 13

	GDefns         goto state 11
	Type           goto state 12

State 11

	GDefn -> Type id "(" GDefns . ")" "{" "}"           (rule 5)
	GDefn -> Type id "(" GDefns . ")" "{" Stmts "}"     (rule 6)

	")"            shift, and enter state 16


State 12

	GDefns -> Type . id                                 (rule 7)
	GDefns -> Type . id "," GDefns                      (rule 8)

	id             shift, and enter state 15


State 13

	GDefn -> Type id "(" ")" . "{" "}"                  (rule 3)
	GDefn -> Type id "(" ")" . "{" Stmts "}"            (rule 4)

	"{"            shift, and enter state 14


State 14

	GDefn -> Type id "(" ")" "{" . "}"                  (rule 3)
	GDefn -> Type id "(" ")" "{" . Stmts "}"            (rule 4)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	if             shift, and enter state 23
	for            shift, and enter state 24
	return         shift, and enter state 25
	print_int      shift, and enter state 26
	id             shift, and enter state 27
	"}"            shift, and enter state 28
	while          shift, and enter state 29

	Stmt           goto state 19
	Stmts          goto state 20
	Simple         goto state 21
	Type           goto state 22

State 15

	GDefns -> Type id .                                 (rule 7)
	GDefns -> Type id . "," GDefns                      (rule 8)

	","            shift, and enter state 18
	")"            reduce using rule 7


State 16

	GDefn -> Type id "(" GDefns ")" . "{" "}"           (rule 5)
	GDefn -> Type id "(" GDefns ")" . "{" Stmts "}"     (rule 6)

	"{"            shift, and enter state 17


State 17

	GDefn -> Type id "(" GDefns ")" "{" . "}"           (rule 5)
	GDefn -> Type id "(" GDefns ")" "{" . Stmts "}"     (rule 6)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	if             shift, and enter state 23
	for            shift, and enter state 24
	return         shift, and enter state 25
	print_int      shift, and enter state 26
	id             shift, and enter state 27
	"}"            shift, and enter state 51
	while          shift, and enter state 29

	Stmt           goto state 19
	Stmts          goto state 50
	Simple         goto state 21
	Type           goto state 22

State 18

	GDefns -> Type id "," . GDefns                      (rule 8)

	bool           shift, and enter state 4
	int            shift, and enter state 5

	GDefns         goto state 49
	Type           goto state 12

State 19

	Stmts -> Stmt .                                     (rule 22)
	Stmts -> Stmt . Stmts                               (rule 23)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	if             shift, and enter state 23
	for            shift, and enter state 24
	return         shift, and enter state 25
	print_int      shift, and enter state 26
	id             shift, and enter state 27
	"}"            reduce using rule 22
	while          shift, and enter state 29

	Stmt           goto state 19
	Stmts          goto state 48
	Simple         goto state 21
	Type           goto state 22

State 20

	GDefn -> Type id "(" ")" "{" Stmts . "}"            (rule 4)

	"}"            shift, and enter state 47


State 21

	Stmt -> Simple . ";"                                (rule 9)

	";"            shift, and enter state 46


State 22

	Simple -> Type . Ids                                (rule 27)

	id             shift, and enter state 45

	Ids            goto state 44

State 23

	Stmt -> if . "(" Exp ")" Stmt else Stmt             (rule 10)
	Stmt -> if . "(" Exp ")" "{" Stmts "}" else Stmt    (rule 11)
	Stmt -> if . "(" Exp ")" Stmt else "{" Stmts "}"    (rule 12)
	Stmt -> if . "(" Exp ")" "{" Stmts "}" else "{" Stmts "}"    (rule 13)
	Stmt -> if . "(" Exp ")" Stmt                       (rule 14)
	Stmt -> if . "(" Exp ")" "{" Stmts "}"              (rule 15)

	"("            shift, and enter state 43


State 24

	Stmt -> for . "(" Simple ";" Exp ";" Simple ")" Stmt    (rule 18)
	Stmt -> for . "(" Simple ";" Exp ";" Simple ")" "{" Stmts "}"    (rule 19)

	"("            shift, and enter state 42


State 25

	Stmt -> return . Exp ";"                            (rule 20)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 35

State 26

	Stmt -> print_int . "(" Exp ")" ";"                 (rule 21)

	"("            shift, and enter state 34


State 27

	Simple -> id . "=" Exp                              (rule 24)
	Simple -> id . "++"                                 (rule 25)
	Simple -> id . "--"                                 (rule 26)

	"++"           shift, and enter state 31
	"--"           shift, and enter state 32
	"="            shift, and enter state 33


State 28

	GDefn -> Type id "(" ")" "{" "}" .                  (rule 3)

	bool           reduce using rule 3
	int            reduce using rule 3
	%eof           reduce using rule 3


State 29

	Stmt -> while . "(" Exp ")" Stmt                    (rule 16)
	Stmt -> while . "(" Exp ")" "{" Stmts "}"           (rule 17)

	"("            shift, and enter state 30


State 30

	Stmt -> while "(" . Exp ")" Stmt                    (rule 16)
	Stmt -> while "(" . Exp ")" "{" Stmts "}"           (rule 17)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 75

State 31

	Simple -> id "++" .                                 (rule 25)

	";"            reduce using rule 25
	")"            reduce using rule 25


State 32

	Simple -> id "--" .                                 (rule 26)

	";"            reduce using rule 26
	")"            reduce using rule 26


State 33

	Simple -> id "=" . Exp                              (rule 24)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 74

State 34

	Stmt -> print_int "(" . Exp ")" ";"                 (rule 21)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 73

State 35

	Stmt -> return Exp . ";"                            (rule 20)
	Exp -> Exp . "+" Exp                                (rule 37)
	Exp -> Exp . "-" Exp                                (rule 38)
	Exp -> Exp . "/" Exp                                (rule 39)
	Exp -> Exp . "*" Exp                                (rule 40)
	Exp -> Exp . "%" Exp                                (rule 41)
	Exp -> Exp . "==" Exp                               (rule 42)
	Exp -> Exp . ">" Exp                                (rule 43)
	Exp -> Exp . "<" Exp                                (rule 44)
	Exp -> Exp . ">=" Exp                               (rule 45)
	Exp -> Exp . "<=" Exp                               (rule 46)
	Exp -> Exp . "!=" Exp                               (rule 47)
	Exp -> Exp . "&&" Exp                               (rule 48)

	";"            shift, and enter state 60
	"+"            shift, and enter state 61
	"-"            shift, and enter state 62
	"*"            shift, and enter state 63
	"/"            shift, and enter state 64
	"%"            shift, and enter state 65
	"=="           shift, and enter state 66
	"!="           shift, and enter state 67
	">"            shift, and enter state 68
	"<"            shift, and enter state 69
	">="           shift, and enter state 70
	"<="           shift, and enter state 71
	"&&"           shift, and enter state 72


State 36

	Exp -> true .                                       (rule 35)

	","            reduce using rule 35
	";"            reduce using rule 35
	"+"            reduce using rule 35
	"-"            reduce using rule 35
	"*"            reduce using rule 35
	"/"            reduce using rule 35
	"%"            reduce using rule 35
	"=="           reduce using rule 35
	"!="           reduce using rule 35
	">"            reduce using rule 35
	"<"            reduce using rule 35
	">="           reduce using rule 35
	"<="           reduce using rule 35
	")"            reduce using rule 35
	"&&"           reduce using rule 35


State 37

	Exp -> false .                                      (rule 36)

	","            reduce using rule 36
	";"            reduce using rule 36
	"+"            reduce using rule 36
	"-"            reduce using rule 36
	"*"            reduce using rule 36
	"/"            reduce using rule 36
	"%"            reduce using rule 36
	"=="           reduce using rule 36
	"!="           reduce using rule 36
	">"            reduce using rule 36
	"<"            reduce using rule 36
	">="           reduce using rule 36
	"<="           reduce using rule 36
	")"            reduce using rule 36
	"&&"           reduce using rule 36


State 38

	Exp -> scan_int . "(" ")"                           (rule 51)

	"("            shift, and enter state 59


State 39

	Exp -> id .                                         (rule 50)
	Exp -> id . "(" Exp ")"                             (rule 52)

	","            reduce using rule 50
	";"            reduce using rule 50
	"+"            reduce using rule 50
	"-"            reduce using rule 50
	"*"            reduce using rule 50
	"/"            reduce using rule 50
	"%"            reduce using rule 50
	"=="           reduce using rule 50
	"!="           reduce using rule 50
	">"            reduce using rule 50
	"<"            reduce using rule 50
	">="           reduce using rule 50
	"<="           reduce using rule 50
	"("            shift, and enter state 58
	")"            reduce using rule 50
	"&&"           reduce using rule 50


State 40

	Exp -> num .                                        (rule 34)

	","            reduce using rule 34
	";"            reduce using rule 34
	"+"            reduce using rule 34
	"-"            reduce using rule 34
	"*"            reduce using rule 34
	"/"            reduce using rule 34
	"%"            reduce using rule 34
	"=="           reduce using rule 34
	"!="           reduce using rule 34
	">"            reduce using rule 34
	"<"            reduce using rule 34
	">="           reduce using rule 34
	"<="           reduce using rule 34
	")"            reduce using rule 34
	"&&"           reduce using rule 34


State 41

	Exp -> "!" . Exp                                    (rule 49)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 57

State 42

	Stmt -> for "(" . Simple ";" Exp ";" Simple ")" Stmt    (rule 18)
	Stmt -> for "(" . Simple ";" Exp ";" Simple ")" "{" Stmts "}"    (rule 19)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	id             shift, and enter state 27

	Simple         goto state 56
	Type           goto state 22

State 43

	Stmt -> if "(" . Exp ")" Stmt else Stmt             (rule 10)
	Stmt -> if "(" . Exp ")" "{" Stmts "}" else Stmt    (rule 11)
	Stmt -> if "(" . Exp ")" Stmt else "{" Stmts "}"    (rule 12)
	Stmt -> if "(" . Exp ")" "{" Stmts "}" else "{" Stmts "}"    (rule 13)
	Stmt -> if "(" . Exp ")" Stmt                       (rule 14)
	Stmt -> if "(" . Exp ")" "{" Stmts "}"              (rule 15)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 55

State 44

	Simple -> Type Ids .                                (rule 27)

	";"            reduce using rule 27
	")"            reduce using rule 27


State 45

	Ids -> id .                                         (rule 28)
	Ids -> id . "," Ids                                 (rule 29)
	Ids -> id . "=" Exp                                 (rule 30)
	Ids -> id . "=" Exp "," Ids                         (rule 31)

	","            shift, and enter state 53
	";"            reduce using rule 28
	"="            shift, and enter state 54
	")"            reduce using rule 28


State 46

	Stmt -> Simple ";" .                                (rule 9)

	bool           reduce using rule 9
	int            reduce using rule 9
	if             reduce using rule 9
	for            reduce using rule 9
	return         reduce using rule 9
	else           reduce using rule 9
	print_int      reduce using rule 9
	id             reduce using rule 9
	"}"            reduce using rule 9
	while          reduce using rule 9


State 47

	GDefn -> Type id "(" ")" "{" Stmts "}" .            (rule 4)

	bool           reduce using rule 4
	int            reduce using rule 4
	%eof           reduce using rule 4


State 48

	Stmts -> Stmt Stmts .                               (rule 23)

	"}"            reduce using rule 23


State 49

	GDefns -> Type id "," GDefns .                      (rule 8)

	")"            reduce using rule 8


State 50

	GDefn -> Type id "(" GDefns ")" "{" Stmts . "}"     (rule 6)

	"}"            shift, and enter state 52


State 51

	GDefn -> Type id "(" GDefns ")" "{" "}" .           (rule 5)

	bool           reduce using rule 5
	int            reduce using rule 5
	%eof           reduce using rule 5


State 52

	GDefn -> Type id "(" GDefns ")" "{" Stmts "}" .     (rule 6)

	bool           reduce using rule 6
	int            reduce using rule 6
	%eof           reduce using rule 6


State 53

	Ids -> id "," . Ids                                 (rule 29)

	id             shift, and enter state 45

	Ids            goto state 95

State 54

	Ids -> id "=" . Exp                                 (rule 30)
	Ids -> id "=" . Exp "," Ids                         (rule 31)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 94

State 55

	Stmt -> if "(" Exp . ")" Stmt else Stmt             (rule 10)
	Stmt -> if "(" Exp . ")" "{" Stmts "}" else Stmt    (rule 11)
	Stmt -> if "(" Exp . ")" Stmt else "{" Stmts "}"    (rule 12)
	Stmt -> if "(" Exp . ")" "{" Stmts "}" else "{" Stmts "}"    (rule 13)
	Stmt -> if "(" Exp . ")" Stmt                       (rule 14)
	Stmt -> if "(" Exp . ")" "{" Stmts "}"              (rule 15)
	Exp -> Exp . "+" Exp                                (rule 37)
	Exp -> Exp . "-" Exp                                (rule 38)
	Exp -> Exp . "/" Exp                                (rule 39)
	Exp -> Exp . "*" Exp                                (rule 40)
	Exp -> Exp . "%" Exp                                (rule 41)
	Exp -> Exp . "==" Exp                               (rule 42)
	Exp -> Exp . ">" Exp                                (rule 43)
	Exp -> Exp . "<" Exp                                (rule 44)
	Exp -> Exp . ">=" Exp                               (rule 45)
	Exp -> Exp . "<=" Exp                               (rule 46)
	Exp -> Exp . "!=" Exp                               (rule 47)
	Exp -> Exp . "&&" Exp                               (rule 48)

	"+"            shift, and enter state 61
	"-"            shift, and enter state 62
	"*"            shift, and enter state 63
	"/"            shift, and enter state 64
	"%"            shift, and enter state 65
	"=="           shift, and enter state 66
	"!="           shift, and enter state 67
	">"            shift, and enter state 68
	"<"            shift, and enter state 69
	">="           shift, and enter state 70
	"<="           shift, and enter state 71
	")"            shift, and enter state 93
	"&&"           shift, and enter state 72


State 56

	Stmt -> for "(" Simple . ";" Exp ";" Simple ")" Stmt    (rule 18)
	Stmt -> for "(" Simple . ";" Exp ";" Simple ")" "{" Stmts "}"    (rule 19)

	";"            shift, and enter state 92


State 57

	Exp -> Exp . "+" Exp                                (rule 37)
	Exp -> Exp . "-" Exp                                (rule 38)
	Exp -> Exp . "/" Exp                                (rule 39)
	Exp -> Exp . "*" Exp                                (rule 40)
	Exp -> Exp . "%" Exp                                (rule 41)
	Exp -> Exp . "==" Exp                               (rule 42)
	Exp -> Exp . ">" Exp                                (rule 43)
	Exp -> Exp . "<" Exp                                (rule 44)
	Exp -> Exp . ">=" Exp                               (rule 45)
	Exp -> Exp . "<=" Exp                               (rule 46)
	Exp -> Exp . "!=" Exp                               (rule 47)
	Exp -> Exp . "&&" Exp                               (rule 48)
	Exp -> "!" Exp .                                    (rule 49)

	","            reduce using rule 49
	";"            reduce using rule 49
	"+"            reduce using rule 49
	"-"            reduce using rule 49
	"*"            reduce using rule 49
	"/"            reduce using rule 49
	"%"            reduce using rule 49
	"=="           reduce using rule 49
	"!="           reduce using rule 49
	">"            reduce using rule 49
	"<"            reduce using rule 49
	">="           reduce using rule 49
	"<="           reduce using rule 49
	")"            reduce using rule 49
	"&&"           reduce using rule 49


State 58

	Exp -> id "(" . Exp ")"                             (rule 52)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 91

State 59

	Exp -> scan_int "(" . ")"                           (rule 51)

	")"            shift, and enter state 90


State 60

	Stmt -> return Exp ";" .                            (rule 20)

	bool           reduce using rule 20
	int            reduce using rule 20
	if             reduce using rule 20
	for            reduce using rule 20
	return         reduce using rule 20
	else           reduce using rule 20
	print_int      reduce using rule 20
	id             reduce using rule 20
	"}"            reduce using rule 20
	while          reduce using rule 20


State 61

	Exp -> Exp "+" . Exp                                (rule 37)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 89

State 62

	Exp -> Exp "-" . Exp                                (rule 38)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 88

State 63

	Exp -> Exp "*" . Exp                                (rule 40)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 87

State 64

	Exp -> Exp "/" . Exp                                (rule 39)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 86

State 65

	Exp -> Exp "%" . Exp                                (rule 41)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 85

State 66

	Exp -> Exp "==" . Exp                               (rule 42)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 84

State 67

	Exp -> Exp "!=" . Exp                               (rule 47)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 83

State 68

	Exp -> Exp ">" . Exp                                (rule 43)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 82

State 69

	Exp -> Exp "<" . Exp                                (rule 44)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 81

State 70

	Exp -> Exp ">=" . Exp                               (rule 45)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 80

State 71

	Exp -> Exp "<=" . Exp                               (rule 46)

	true           shift, and enter state 36
	false          shift, and enter state 37
	scan_int       shift, and enter state 38
	id             shift, and enter state 39
	num            shift, and enter state 40
	"!"            shift, and enter state 41

	Exp            goto state 79

State 72

	Exp -> Exp "&&" . Exp                               (rule 48)
